--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.1.2
-Flask-CORS==3.0.10
-pandas==1.4.2
-xlrd==2.0.1
-Flask-SQLAlchemy==2.5.1
+Flask==2.0.2
+pandas==1.3.4
+flask-cors==3.0.10
+flask_sqlalchemy==2.0.23
+Werkzeug==2.0.2
+pymssql
